--- a/server/package.json
+++ b/server/package.json
@@ -22,11 +22,12 @@
     "@types/bcrypt": "^6.0.0",
     "@types/express": "^5.0.6",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "^25.0.9",
     "dotenv": "^17.2.3",
     "nodemon": "^3.1.11",
-    "pino-pretty": "^10.3.1",
     "pino": "^10.2.1",
+    "pino-pretty": "^10.3.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
   }
