--- a/server/package.json
+++ b/server/package.json
@@ -14,15 +14,18 @@
   "packageManager": "pnpm@10.27.0",
   "dependencies": {
     "bcrypt": "^6.0.0",
+    "body-parser": "^2.2.2",
+    "cors": "^2.8.6",
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.1.4"
   },
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
+    "@types/body-parser": "^1.19.6",
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.6",
     "@types/jsonwebtoken": "^9.0.10",
-    "@types/mongoose": "^5.11.97",
     "@types/node": "^25.0.9",
     "dotenv": "^17.2.3",
     "nodemon": "^3.1.11",
