--- a/server/package.json
+++ b/server/package.json
@@ -17,16 +17,19 @@
     "cors": "^2.8.6",
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
-    "mongoose": "^9.1.4"
+    "mongoose": "^9.1.4",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
+    "bcryptjs": "^3.0.3"
   },
   "devDependencies": {
-    "@types/bcryptjs": "^6.0.0",
+    "@types/bcryptjs": "^2.4.6",
     "@types/body-parser": "^1.19.6",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.6",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^25.0.9",
-    "bcryptjs": "^3.0.3",
+    "@types/swagger-ui-express": "^4.1.8",
     "dotenv": "^17.2.3",
     "nodemon": "^3.1.11",
     "pino": "^10.2.1",
